2002-04-15  Han-Wen  <hanwen@cs.uu.nl>

	* mf/feta-din-code.mf: dynamic z sign.

2002-04-13  Heikki Junes <hjunes@cc.hut.fi>

	* lilypond-mode.el: Prevent recoloring strings and comments.

	* lilypond-font-lock.el: Handle block comments: block comments
	can have also ordinary comments inside.
	
2002-04-13  Han-Wen  <hanwen@cs.uu.nl>

	* lily/stem.cc (get_default_dir): set direction to CENTER if
	invisible. Various other fixes to deal with invisible stems and
	stem-direction == CENTER.

	* lily/rest-collision.cc (do_shift): take direction from note if
	not set.

	* input/regression/tie-grace.ly: new file.

	* lily/tie-engraver.cc (create_grobs): fix tied graces.

	* lily/note-spacing.cc (stem_dir_correction): set fixed space for
	knee correction. Fixes tight spacing for knees.

2002-04-12  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* VERSION: 1.5.52 released
	
	* lily/*.cc: add some undocced properties.
	scm/grob-description.scm: idem.

2002-04-12  Heikki Junes <hjunes@cc.hut.fi>

	* lilypond-font-lock.el: Handle slurs \( and \), numbers,
	multi-measure rests like "R1 *4" and scheme (typically has '#' 
	in the beginning). Small fixes. Add few reserved words.

2002-04-12  Jan Nieuwenhuizen  <janneke@gnu.org>

	* Documentation/topdocs/INSTALL.texi: Updates for MacOS X and
	emacs mode.

	* Documentation/windows/installing.texi: Suggest gswin32c (console
	program) for getting the version.  Layout fixes.

2002-04-11  Jan Nieuwenhuizen  <janneke@gnu.org>

	* Documentation/user/tutorial.itely (Running LilyPond):  Separate
	windows viewing commands, remove silly comment about Yap.

2002-04-10  Mats Bengtsson  <matsb@s3.kth.se>
	
	* Documentation/topdocs/INSTALL.texi: Describe how to learn
	configure to find kpathsea on for example Slackware 8.0.

	* scripts/ly2dvi.py (non_path_environment): Set $TEXMF correctly.

        * scm/grob-description.scm (MultiMeasureRest): number-threshold=1
        by default: avoid "1" over single bar rests.
